Fix frontend CI to pass when no tests are found

--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -53,8 +53,8 @@ jobs:
 
       - name: Run tests
         working-directory: starter/frontend
-        run: CI=true npm test
-
+        # This flag is used to prevent the pipeline from failing when no test files are found.
+        run: CI=true npm test -- --passWithNoTests
   build:
     name: Build Frontend
     runs-on: ubuntu-latest
