fix: update adduser syntax for debian-based slim image

--- a/starter/backend/Dockerfile
+++ b/starter/backend/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.10-slim
 ENV FLASK_RUN_HOST=0.0.0.0
 
 WORKDIR /
-RUN adduser -u 1000 -D app
+RUN useradd -u 1000 app
 RUN apk update && \
   apk add \
   pcre \
