--- a/starter/backend/Dockerfile
+++ b/starter/backend/Dockerfile
@@ -1,8 +1,8 @@
-FROM python:3.10-slim
+FROM public.ecr.aws/docker/library/python:3.10-slim
 ENV FLASK_RUN_HOST=0.0.0.0
 
 WORKDIR /
-RUN useradd -u 1000 app
+RUN adduser -u 1000 -D app
 RUN apk update && \
   apk add \
   pcre \
