بix uwsgi build failure on alpine using CFLAGS

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -74,6 +74,5 @@ jobs:
        # Fix for uWSGI build failure on Alpine Linux due to GCC 14+ strict type checking.
        # Allowing the compiler to ignore uWSGI pointer type warnings
        run: |
-         docker build \
-         --build-arg CFLAGS="-Wno-error=incompatible-pointer-types" \
-         -t mp-backend:ci .
+         export CFLAGS="-Wno-error=incompatible-pointer-types"
+         docker build -t mp-backend:ci .
