--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -71,8 +71,5 @@ jobs:
         
      - name: Build Docker image
        working-directory: starter/backend
-       # Fix for uWSGI build failure on Alpine Linux due to GCC 14+ strict type checking.
-       # Allowing the compiler to ignore uWSGI pointer type warnings
-       run: |
-         export CFLAGS="-Wno-error=incompatible-pointer-types"
-         docker build -t mp-backend:ci .
+       run: docker build -t mp-backend:ci .
+       
