--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: mp-backend 
+          ECR_REPOSITORY: backend 
           IMAGE_TAG: latest
         working-directory: starter/backend
         run: |
@@ -79,7 +79,7 @@ jobs:
         working-directory: starter/backend/k8s
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: mp-backend
+          ECR_REPOSITORY: backend
         run: |
           curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
           ./kustomize edit set image backend=$ECR_REGISTRY/$ECR_REPOSITORY:latest
