--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: mp-frontend 
+          ECR_REPOSITORY: frontend 
           IMAGE_TAG: latest
           MOVIE_API_URL: http://aefe888f25371482e9641174c1062121-1960966480.us-east-1.elb.amazonaws.com
         working-directory: starter/frontend
@@ -78,7 +78,7 @@ jobs:
         working-directory: starter/frontend/k8s
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: mp-frontend
+          ECR_REPOSITORY: frontend
         run: |
           curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
           ./kustomize edit set image frontend=$ECR_REGISTRY/$ECR_REPOSITORY:latest
