fix frontend backend API URL

--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -63,7 +63,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: frontend 
           IMAGE_TAG: latest
-          MOVIE_API_URL: http://aefe888f25371482e9641174c1062121-1960966480.us-east-1.elb.amazonaws.com
+          MOVIE_API_URL: http://aefe888f25371482e9641174c1062121-1960966480.us-east-1.elb.amazonaws.com/movies
         working-directory: starter/frontend
         run: |
           docker build \
