--- a/.github/workflows/frontend-cd.yml
+++ b/.github/workflows/frontend-cd.yml
@@ -63,11 +63,11 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: frontend 
           IMAGE_TAG: latest
-          REACT_APP_MOVIE_API_URL: http://aefe888f25371482e9641174c1062121-1960966480.us-east-1.elb.amazonaws.com/movies
+          URL: http://aefe888f25371482e9641174c1062121-1960966480.us-east-1.elb.amazonaws.com
         working-directory: starter/frontend
         run: |
           docker build \
-            --build-arg=REACT_APP_MOVIE_API_URL=$MOVIE_API_URL \
+            --build-arg=REACT_APP_MOVIE_API_URL=$URL \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
